--- a/anomalies-analysis.ipynb
+++ b/anomalies-analysis.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
     "\n",
     "if anomaly_detected:\n",
     "    print(\"ALERT: High sensor anomaly ratio detected (ARIMA)! Check IoT device.\")\n",
-    "    open_default_mail_app(\"chetankumarpulipati4@gmail.com\",\"Alert\",\"Check Sensors\")\n",
+    "    open_default_mail_app(\"example@gmail.com\",\"Alert\",\"Check Sensors\")\n",
     "print(\"ARIMA model completed.\") \n",
     "print(\"Detected anomalies:\")\n",
     "\n",
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
     "    \n",
     "if anomaly_detected:\n",
     "    print(\"ALERT: High sensor anomaly ratio detected (AdaBoost)! Check IoT device.\")\n",
-    "    open_default_mail_app(\"chetankumarpulipati4@gmail.com\", \"Maintenance required for sensor_00\", \"AdaBoost model predicted that the sensor is having abnormal patterns. Please schedule the maintenance.\")\n",
+    "    open_default_mail_app(\"example@gmail.com\", \"Maintenance required for sensor_00\", \"AdaBoost model predicted that the sensor is having abnormal patterns. Please schedule the maintenance.\")\n",
     "\n",
     "print(\"Adaboost model completed.\")\n",
     "print(anomaly_ratio)"
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
     "    \n",
     "if anomaly_detected:\n",
     "    print(\"ALERT: High sensor anomaly ratio detected (XGBoost)! Check IoT device.\")\n",
-    "    open_default_mail_app(\"chetankumarpulipati4@gmail.com\", \"Maintenance required for sensor_00\", \"XGBoost model predicted that the sensor is having abnormal patterns. Please schedule the maintenance.\")\n",
+    "    open_default_mail_app(\"example@gmail.com\", \"Maintenance required for sensor_00\", \"XGBoost model predicted that the sensor is having abnormal patterns. Please schedule the maintenance.\")\n",
     "print(\"XGBoost model completed.\")\n",
     "\n",
     "print(anomaly_ratio)"
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +507,7 @@
     "    \n",
     "if anomaly_detected:\n",
     "    print(\"ALERT: High sensor anomaly ratio detected (DNN)! Check IoT device.\")\n",
-    "    open_default_mail_app(\"chetankumarpulipati4@gmail.com\", \"Maintenance required for sensor_00\", \"DNN model predicted that the sensor is having abnormal patterns. Please schedule the maintenance.\")\n",
+    "    open_default_mail_app(\"example@gmail.com\", \"Maintenance required for sensor_00\", \"DNN model predicted that the sensor is having abnormal patterns. Please schedule the maintenance.\")\n",
     "\n",
     "print(\"DNN model completed.\")\n",
     "print(anomaly_ratio)"
@@ -639,13 +639,6 @@
     "plt.savefig('Old Models Bar')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
